# market_mix_modelling

./: .env.example  .gitignore  README.md  main.py  mmm_dataset.csv  mmm_prototype.ipynb  prd.txt  pyproject.toml
backend/: app.py  config.py
backend/stages/: causal_stage.py  data_stage.py  forecasting_stage.py  modeling_stage.py  pipeline.py  simulation_stage.py  state.py  strategy_stage.py
backend/utils/: transforms.py
frontend/: app.py
